# sc-py-asdocs-vscode

./: .gitignore  README.MD  build.py  default.as.predefined  pyproject.toml
extras/: extract_asbaseclasses.cfg
