[project]
name = "sc-py-asdocs-vscode"
version = "0.0.1"
description = ""
authors = [
    {name = "AnggaraNothing",email = "anggaranothing.other228@simplelogin.com"}
]
license = {text = "LGPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "vdf (>=3.4,<4.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
